--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,26 +5,30 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # 前端静态资源
-    location / {
-        try_files $uri $uri/ /index.html;
+    # ========== WebComment mounted under /wc/ ==========
+
+    # 前端静态资源（挂在 /wc/）
+    location /wc/ {
+        # 关键：用 root + try_files，让 /wc/ 也能回 index.html
+        try_files $uri $uri/ /wc/index.html;
     }
 
-    # 反代到后端（同域，避免 CORS）
-    location = /token {
+    # /wc/token -> 后端 /token
+    location = /wc/token {
         proxy_pass http://api:8000/token;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /messages {
+    # /wc/messages -> 后端 /messages
+    location /wc/messages {
         proxy_pass http://api:8000/messages;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # SSE：必须禁用缓冲，否则前端收不到实时事件
-    location /events {
+    # /wc/events -> 后端 /events (SSE)
+    location /wc/events {
         proxy_pass http://api:8000/events;
         proxy_http_version 1.1;
 
@@ -35,8 +39,14 @@ server {
         proxy_cache off;
         proxy_read_timeout 3600s;
 
-        # SSE 建议
         add_header Cache-Control "no-cache";
         add_header X-Accel-Buffering "no";
+    }
+
+    # ========== Optional: root path / 暂时返回一个占位 ==========
+    # 你主域名还没内容的话，先给个 404/提示页都可以。
+    location = / {
+        return 200 "metark.ai is alive. Try /wc/\n";
+        add_header Content-Type text/plain;
     }
 }
