fix: nginx wc path routing

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,29 +5,20 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # ========== WebComment mounted under /wc/ ==========
-
-    # 前端静态资源（挂在 /wc/）
-    location /wc/ {
-        # 关键：用 root + try_files，让 /wc/ 也能回 index.html
-        try_files $uri $uri/ /wc/index.html;
-    }
-
-    # /wc/token -> 后端 /token
+    # ========== API（优先匹配，放在 /wc/ 前面） ==========
     location = /wc/token {
         proxy_pass http://api:8000/token;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # /wc/messages -> 后端 /messages
     location /wc/messages {
         proxy_pass http://api:8000/messages;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # /wc/events -> 后端 /events (SSE)
+    # SSE
     location /wc/events {
         proxy_pass http://api:8000/events;
         proxy_http_version 1.1;
@@ -43,8 +34,16 @@ server {
         add_header X-Accel-Buffering "no";
     }
 
-    # ========== Optional: root path / 暂时返回一个占位 ==========
-    # 你主域名还没内容的话，先给个 404/提示页都可以。
+    # ========== 前端（/wc/） ==========
+    location ^~ /wc/ {
+        # 去掉 /wc 前缀，让它从根目录提供 index.html / assets
+        rewrite ^/wc(/.*)$ $1 break;
+
+        # SPA：没有真实文件就回 index.html
+        try_files $uri $uri/ /index.html;
+    }
+
+    # 根域名暂时占位（可选）
     location = / {
         return 200 "metark.ai is alive. Try /wc/\n";
         add_header Content-Type text/plain;
