--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,7 +5,61 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # ========== API（优先匹配，放在 /wc/ 前面） ==========
+    # ==========================================================
+    # API（优先匹配，放在 /wc/ 前面）
+    # 兼容两种路径：
+    #   1) 旧版：/wc/token /wc/messages /wc/events
+    #   2) 新版（你现在的 api.ts）：/token /messages /events /admin/...
+    # ==========================================================
+
+    # -------- 新版：根路径 API（你现在前端在用） --------
+    location = /token {
+        proxy_pass http://api:8000/token;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location = /messages {
+        proxy_pass http://api:8000/messages;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # /messages/{id}
+    location /messages/ {
+        proxy_pass http://api:8000/messages/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Admin API（控制台用）
+    location /admin/ {
+        proxy_pass http://api:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # SSE：/events（你现在前端在用）
+    location = /events {
+        proxy_pass http://api:8000/events;
+        proxy_http_version 1.1;
+
+        # SSE 稳定性
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Connection "";
+
+        proxy_buffering off;
+        proxy_cache off;
+        chunked_transfer_encoding off;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+
+        add_header Cache-Control "no-cache";
+        add_header X-Accel-Buffering "no";
+    }
+
+    # -------- 旧版：/wc 前缀 API（保留兼容，不影响） --------
     location = /wc/token {
         proxy_pass http://api:8000/token;
         proxy_set_header Host $host;
@@ -18,23 +72,27 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # SSE
     location /wc/events {
         proxy_pass http://api:8000/events;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Connection "";
 
         proxy_buffering off;
         proxy_cache off;
+        chunked_transfer_encoding off;
         proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
 
         add_header Cache-Control "no-cache";
         add_header X-Accel-Buffering "no";
     }
 
-    # ========== 前端（/wc/） ==========
+    # ==========================================================
+    # 前端（/wc/）
+    # ==========================================================
     location ^~ /wc/ {
         # 去掉 /wc 前缀，让它从根目录提供 index.html / assets
         rewrite ^/wc(/.*)$ $1 break;
