--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -35,8 +35,12 @@ server {
     # Admin API（控制台用）
     location /admin/ {
         proxy_pass http://api:8000/admin/;
+
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # ✅ 显式转发 Authorization（保险）
+        proxy_set_header Authorization $http_authorization;
     }
 
     # SSE：/events（你现在前端在用）
