--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -94,6 +94,16 @@ server {
         add_header X-Accel-Buffering "no";
     }
 
+    # Admin API (for /wc/console)
+    location /wc/admin/ {
+        proxy_pass http://api:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # ✅ 转发 Authorization（必须）
+        proxy_set_header Authorization $http_authorization;
+    }
+
     # ==========================================================
     # 前端（/wc/）
     # ==========================================================
