fix /wc/ -> /wc/ redirect

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -105,8 +105,12 @@ server {
     }
 
     # ==========================================================
-    # 前端（/wc/）
+    # 前端（/wc）
     # ==========================================================
+    # 兼容：/wc 自动跳转到 /wc/
+    location = /wc {
+        return 302 /wc/;
+    }
     location ^~ /wc/ {
         # 去掉 /wc 前缀，让它从根目录提供 index.html / assets
         rewrite ^/wc(/.*)$ $1 break;
